<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_count"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_score"
        android:text="@string/question_count"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_question_count"
        android:text="@string/difficulty"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_difficulty"
        android:text="@string/subject"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/countdown"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="Here will be the question\nHere will be the question\nHere will be the question"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1_rb" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2_rb" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3_rb" />

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_4_rb" />
    </RadioGroup>

    <Button
        android:id="@+id/button_confirm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2DE6CA"
        android:text="@string/confirm_button"
        android:textColor="@color/black" />


</RelativeLayout>