<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/comp_kwiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/comp_kwiz"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_start_quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/highscore_0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start_quiz"
        android:textColor="@color/black"
        app:backgroundTint="#2DE6CA" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_start_quiz"
        android:layout_alignStart="@id/button_start_quiz"
        android:layout_alignLeft="@id/button_start_quiz"

        android:layout_marginTop="26dp"
        android:dropDownSelector="@color/material_on_primary_emphasis_medium" />

    <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_difficulty"
        android:layout_alignStart="@id/button_start_quiz"
        android:layout_alignLeft="@id/button_start_quiz"
        android:layout_marginTop="16dp" />


</RelativeLayout>
